--- a/css/index.css
+++ b/css/index.css
@@ -37,9 +37,11 @@ h1 {
 	height:720px;
 }
 .summary {
-text-align:center;
-font-size: 20px;
-margin: 20px;
+text-align:left;
+font-size: 1.5em;
+margin: 0 auto;
+max-width: 40em;
+padding-bottom: 50px;
 }
 
 a {
@@ -406,4 +408,29 @@ a.active {
 
 .row {
 	margin-right: 0px;
+}
+
+img#profile {
+	display: block;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
+	border-radius: 50%;
+	width: 300px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 15px 30px;
+    border: 2px solid #ddd;
+    color: white;
+    text-decoration: none;
+    margin: 50px 10px 10px 0;
+    transition: all .6s;
+    min-width: 100px;
+    text-align: center
+}
+
+.btn:hover {
+    background: purple;
+    color: #fff;
 }
