--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:700);
+@import url(http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 
 * {
 	margin:auto;
@@ -45,7 +46,6 @@ padding-bottom: 50px;
 }
 
 a {
-	color: #fff;
 	text-decoration: none;
 	margin-right: 30px;
 	transition: ease 0.2s;
@@ -433,4 +433,80 @@ img#profile {
 .btn:hover {
     background: purple;
     color: #fff;
+}
+
+/*img.panel {
+	width: 400px;
+}*/
+
+figure.snip1205 {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 220px;
+  max-width: 310px;
+  width: 100%;
+  background: #000000;
+  text-align: center;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+figure.snip1205 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+figure.snip1205 img {
+  max-width: 100%;
+  vertical-align: top;
+}
+figure.snip1205 i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  font-size: 34px;
+  color: #000000;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  background: #ffffff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  -webkit-transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
+  transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+figure.snip1205 a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+}
+figure.snip1205.green {
+  background-color: #229955
+}
+figure.snip1205:hover img,
+figure.snip1205.hover img {
+  opacity: 0.3;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+figure.snip1205:hover i,
+figure.snip1205.hover i {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.proj-description {
+	color: white;
+	font-size: 20px;
+	position: absolute;
+	top: 75%;
+	left: 25%;
+	opacity: 0;
+}
+figure.snip1205:hover .proj-description {
+	opacity: 1;
 }
