--- a/css/index.css
+++ b/css/index.css
@@ -19,11 +19,11 @@ h1, #list{
 
 #list {
 	font-size: 40px;
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
 h1 {
-	padding-top: 100px;
+	padding-top: 25px;
 }
 
 .header {
@@ -55,13 +55,8 @@ a:hover {
 	text-decoration: none;
 }
 
-li {
+.classification {
 	display: inline-block;
-}
-
-.logo {
-	margin: 0 auto;
-	left: 0;
 }
 
 h2 {
@@ -535,4 +530,13 @@ figure.snip1205.hover i {
 }
 figure.snip1205:hover .proj-description {
 	opacity: 1;
+}
+
+.resume-info {
+	margin-left: 50px;
+}
+
+#bg-logo {
+	display: block;
+	margin-top: 70px;
 }
