adding jam project

--- a/css/index.css
+++ b/css/index.css
@@ -507,6 +507,14 @@ figure.snip1205.gold {
 figure.snip1205.pink {
   background-color: #E5B8D3
 }
+figure.snip1205.white {
+  background-color: #e1e0de
+}
+
+figure.snip1205.red {
+  background-color: #ff1f1f
+}
+
 figure.snip1205:hover img,
 figure.snip1205.hover img {
   opacity: 0.3;
@@ -527,9 +535,50 @@ figure.snip1205.hover i {
 	left: 25%;
 	opacity: 0;
 }
+
+#deemo-text {
+	color: white;
+	font-size: 30px;
+	position: absolute;
+	top: 75%;
+	left: 37%;
+	opacity: 0;
+}
+
+#jam-text {
+	color: white;
+	font-size: 30px;
+	position: absolute;
+	top: 63%;
+	left: 5%;
+	opacity: 0;
+}
+
+#lfg-text {
+	color: white;
+	font-size: 30px;
+	position: absolute;
+	top: 75%;
+	left: 20%;
+	opacity: 0;
+}
+
 figure.snip1205:hover .proj-description {
 	opacity: 1;
 }
+
+figure.snip1205:hover #deemo-text{
+	opacity: 1;
+}
+
+figure.snip1205:hover #lfg-text{
+	opacity: 1;
+}
+
+figure.snip1205:hover #jam-text{
+	opacity: 1;
+}
+
 
 .resume-info {
 	margin-left: 50px;
@@ -542,4 +591,23 @@ figure.snip1205:hover .proj-description {
 
 .list-resume {
 	margin-left: 30px;
+}
+
+#education {
+	margin-bottom: 50px;
+}
+
+#wip {
+	color: red;
+}
+
+#copyright {
+background-color: black;
+height: 100px;
+}
+
+#copy-pp {
+padding-top: 40px;
+color: white;
+font-size: 17px;
 }
